--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                     });
             }
             else {
+                let varss= 13
+                init(varss)
                 console.log("getUserMedia not supported");
             }
         }
