--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
                     });
             }
             else {
-                let varss= 13
-                init(varss)
+                let varss=12
+                for(i=0;i<10;i++){
+                    init(varss)
+                }
                 console.log("getUserMedia not supported");
             }
         }
