--- a/index.html
+++ b/index.html
@@ -56,48 +56,40 @@
         var wave = document.querySelector(".horizon-lines");
         if (action.classList.contains("active")) {
             console.log("starting...");
-            navigator.getUserMedia = navigator.getUserMedia ||
-                navigator.webkitGetUserMedia ||
-                navigator.mozGetUserMedia;
-            if (navigator.getUserMedia) {
-                navigator.getUserMedia({
-                    audio: true
-                },
-                    function (stream) {
-                        console.log(stream,"stream")
-                        audioContext = new AudioContext();
-                        analyser = audioContext.createAnalyser();
-                        microphone = audioContext.createMediaStreamSource(stream);
-                        javascriptNode = audioContext.createScriptProcessor(2048, 1, 1);
+            navigator.mediaDevices.getUserMedia({
+                audio: true
+            }).then(function (stream) {
+                audioContext = new AudioContext();
+                analyser = audioContext.createAnalyser();
+                microphone = audioContext.createMediaStreamSource(stream);
+                javascriptNode = audioContext.createScriptProcessor(2048, 1, 1);
 
-                        analyser.smoothingTimeConstant = 0.8;
-                        analyser.fftSize = 1024;
+                analyser.smoothingTimeConstant = 0.8;
+                analyser.fftSize = 1024;
 
-                        microphone.connect(analyser);
-                        analyser.connect(javascriptNode);
-                        javascriptNode.connect(audioContext.destination);
-                        javascriptNode.onaudioprocess = function () {
-                            var array = new Uint8Array(analyser.frequencyBinCount);
-                            analyser.getByteFrequencyData(array);
-                            var values = 0;
-                            var length = array.length;
-                            for (var i = 0; i < length; i++) {
-                                values += (array[i]);
-                            }
+                microphone.connect(analyser);
+                analyser.connect(javascriptNode);
+                javascriptNode.connect(audioContext.destination);
+                javascriptNode.onaudioprocess = function () {
+                    var array = new Uint8Array(analyser.frequencyBinCount);
+                    analyser.getByteFrequencyData(array);
+                    var values = 0;
 
-                            var average = values / length;
-                            init(average)
-                        // console.log(average,"average")
-                        annyang.start();
-                        }
-                    },
-                    function (err) {
-                        console.log("The following error occured: " + err.name)
-                    });
-            }
-            else {
-                console.log("getUserMedia not supported");
-            }
+                    var length = array.length;
+                    for (var i = 0; i < length; i++) {
+                        values += (array[i]);
+                    }
+
+                    var average = values / length;
+                    init(average)
+                    // console.log(average,"average")
+                    annyang.start();
+                }
+            }).catch(err => console.log(err))
+        }
+
+        else {
+            console.log("getUserMedia not supported");
         }
     }
 </script>
