New update with command

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <!-- <div class="horizon-lines hidden" > -->
         <div></div>
     </div>
+    <audio id="audio" autoplay></audio>
 </body>
 
 <script type="module" src="./main/main.js"></script>
