--- a/wave/index.html
+++ b/wave/index.html
@@ -14,24 +14,21 @@ Date: 08/14/2014
 
 <head>
     <meta charset="utf-8">
-    <title>
 
-    </title>
-    <style>
-
-    </style>
 </head>
 
 <body>
-    <script src="three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
     <script type="text/javascript" src="wave.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script> -->
 
     <link rel="stylesheet" href="wave.css">
-    <h1 style="text-align: center;">Sound Wave</h1>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"
+        integrity="sha512-FRllqoDevM/yUYKzCe8K8qvyou3LAsBLSuKYvLSoAQLo70wWTSU6KSi110dXOpEIW8+ehByraYPC188htrPnjw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="./main/main.js"></script>
+    <audio id="audio" autoplay="true"></audio>
+
 </body>
-<script>
-    
-</script>
 
 </html>
